<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.NestedScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/nestedScrollView"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/tv_detail_recipe_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:paddingTop="4dp"
            android:paddingBottom="8dp"
            android:paddingStart="8dp"
            android:text="@string/recipe_name_holder"
            android:textColor="@color/primaryText"
            android:textSize="18sp" />

        <CheckBox
            android:id="@+id/chkbox_working_recipe"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="8dp"
            android:textSize="12sp"
            android:text="@string/working_recipe"
            app:layout_constraintEnd_toEndOf="parent"/>

        <View
            android:id="@+id/recipe_name_divider"
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:background="@color/colorPrimaryLight"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:paddingBottom="8dp"
            app:layout_constraintTop_toBottomOf="@+id/tv_detail_recipe_name"/>

        <ImageView
            android:id="@+id/iv_recipe_image"
            android:layout_width="@android:dimen/thumbnail_width"
            android:layout_height="@android:dimen/thumbnail_height"
            android:layout_marginTop="16dp"
            app:layout_constraintTop_toBottomOf="@+id/recipe_name_divider"
            app:layout_constraintRight_toRightOf="@+id/tv_recipe_steps_label"
            app:layout_constraintLeft_toLeftOf="@+id/tv_recipe_steps_label"
            android:background="@drawable/recipe"/>

        <View
            android:id="@+id/recipe_image_divider"
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:background="@color/colorPrimaryLight"
            android:layout_marginTop="16dp"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:paddingBottom="8dp"
            app:layout_constraintTop_toBottomOf="@+id/iv_recipe_image"/>

        <android.support.v7.widget.RecyclerView
            android:id="@+id/rv_recipe_ingredients"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="8dp"
            app:layout_constraintTop_toBottomOf="@+id/recipe_image_divider"/>

        <View
            android:id="@+id/ingredient_divider"
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:background="@color/colorPrimaryLight"
            app:layout_constraintTop_toBottomOf="@+id/rv_recipe_ingredients"/>

        <TextView
            android:id="@+id/tv_recipe_steps_label"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/recipe_step_title"
            android:paddingBottom="4dp"
            android:paddingTop="4dp"
            android:textColor="@color/primaryText"
            android:textSize="18sp"
            app:layout_constraintTop_toBottomOf="@+id/ingredient_divider"/>

        <View
            android:id="@+id/step_divider"
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:background="@color/colorPrimaryLight"
            app:layout_constraintTop_toBottomOf="@+id/tv_recipe_steps_label"/>


        <android.support.v7.widget.RecyclerView
            android:id="@+id/rv_recipe_steps"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@+id/step_divider"/>



    </android.support.constraint.ConstraintLayout>


</android.support.v4.widget.NestedScrollView>